# OpenTIM

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
c_src/: draw_rope.c  globals.c  globals.h  main.c  part_defs.c  tim.h
docs/: reverse-engineering-setup.md
docs/plans/: 2026-07-22-c-to-rust-phase1-layer0.md  2026-07-22-c-to-rust-wave2.md
docs/specs/: 2026-07-22-c-to-rust-port-design.md  2026-07-22-editor-design.md
examples/: reload.rs  trace.rs
reverse-engineering/: README.md
scripts/: build-web.sh  check-ffi-signatures.py  run-temim-win.sh  verify.sh
src/: globals.rs  level_load.rs  lib.rs  main.rs  math.rs  render.rs  resource_dos.rs  tim_c.rs  wasm_libc.rs  web.rs
src/parts/: mod.rs
tests/: baselines.sha256  differential.rs
tests/differential/: README.md  part_borders_intersect.rs  prng.rs  reference.c
web/: index.html  test-auto.html
