[package]
name = "opentim"
version = "0.1.0"
authors = ["Danny Spencer <dan.spencer.np@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# The nannou renderer is optional: the pinned nannou master (2020) pulls winit 0.22,
# which does not compile on aarch64-apple-darwin (objc BOOL is `bool` there, not `i8`).
# Without this feature the simulation runs headless, which is enough to load and step levels.
default = []
gui = ["nannou"]

[lib]
name = "opentim"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
num_enum = "0.5.1"
byteorder = "1"
# Using latest nannou until 0.15.0 comes out.
# 0.14.1 has the bug: https://github.com/nannou-org/nannou/issues/611
nannou = { git = "https://github.com/nannou-org/nannou", branch = "master", optional = true }

# The desktop window. The web build talks to a canvas directly instead, so minifb
# (and its X11/Wayland/AppKit backends) stays out of the wasm binary entirely.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
minifb = "0.28.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.126"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window", "Document", "Element", "HtmlCanvasElement", "HtmlElement",
    "CanvasRenderingContext2d", "ImageData", "MouseEvent", "KeyboardEvent",
    "EventTarget", "CssStyleDeclaration",
]

[build-dependencies]
cc = "1.0"
